[package]
name = "rusty-engine"
version = "0.1.0"
authors = ["Caleb Xavier Berger <caleb.x.berger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.9.0"
gstreamer = "0.15.0"
gstreamer-rtsp-server = "0.15.0"
