[package]
name = "rusty-engine"
version = "0.2.0"
description = "Rust reimagining of potential-engine"
readme = "README.md"
license = "MIT"
authors = ["Caleb Xavier Berger <caleb.x.berger@gmail.com>"]
edition = "2018"

repository = "https://github.com/opensight-cv/rusty-engine"
travis-ci = { repository = "opensight-cv/rusty-engine" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
structopt = "0.3.7"
glib = "0.9.0"
gstreamer = "0.15.0"
gstreamer-rtsp-server = "0.15.0"

[package.metadata.deb]
license-file=["LICENSE", "0"]
depends="libgstrtspserver-1.0-0 (>=1.14.4-1), gstreamer1.0-plugins-ugly (>=1.14.4-1), gstreamer1.0-plugins-good (>=1.14.4-1), gstreamer1.0-plugins-bad (>=1.14.4-1)"
